[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "aldoroshenko",email = "aldoroshenko@neoflex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "pomodoro_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
